--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <gson.version>2.6.2</gson.version>
 
         <sonar.version>7.1</sonar.version>
+        <sonar.sources>src/main/java,src/main/js</sonar.sources>
         <sonarjava.version>5.3.0.13828</sonarjava.version>
     </properties>
 
