--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "custom-example",
+  "name": "Archtoring",
   "version": "0.0.1",
   "devDependencies": {
     "autoprefixer": "6.2.2",
@@ -7,6 +7,7 @@
     "babel-jest": "18.0.0",
     "babel-loader": "6.2.5",
     "babel-preset-react-app": "0.2.1",
+    "chart.js": "^2.7.2",
     "cross-env": "2.0.0",
     "cross-spawn": "4.0.0",
     "css-loader": "0.23.1",
@@ -29,6 +30,7 @@
     "react": "15.6.2",
     "react-addons-shallow-compare": "15.6.2",
     "react-addons-test-utils": "15.6.2",
+    "react-chartjs-2": "^2.7.4",
     "react-dev-utils": "0.2.1",
     "react-dom": "15.6.2",
     "react-router": "3.0.2",
