--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-addons-shallow-compare": "15.6.2",
     "react-addons-test-utils": "15.6.2",
     "react-chartjs-2": "^2.7.4",
+    "react-csv": "^1.0.14",
     "react-dev-utils": "0.2.1",
     "react-dom": "15.6.2",
     "react-router": "3.0.2",
