--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Archtoring",
+  "name": "archtoring",
   "version": "0.0.1",
   "devDependencies": {
     "autoprefixer": "6.2.2",
@@ -45,7 +45,7 @@
     "webpack-dev-server": "1.16.1"
   },
   "scripts": {
-    "build": "node scripts/build.js",
+    "build": "node scripts/build.js --no-uglify",
     "start": "node scripts/start.js",
     "test": "node scripts/test.js"
   },
@@ -80,8 +80,5 @@
       "<rootDir>/scripts",
       "<rootDir>/conf"
     ]
-  },
-  "dependencies": {
-    "http-proxy": "^1.17.0"
   }
 }
